--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   },
   "dependencies": {
     "react": "18.2.0",
-    "react-native": "0.71.4"
+    "react-native": "0.71.4",
+    "use-interval": "^1.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
