--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "cheerio": "^1.0.0-rc.12",
     "react": "18.2.0",
     "react-native": "0.71.4",
     "use-interval": "^1.4.0"
