--- a/package.json
+++ b/package.json
@@ -10,9 +10,13 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-navigation/native": "^6.1.6",
+    "@react-navigation/native-stack": "^6.9.12",
     "cheerio": "^1.0.0-rc.12",
     "react": "18.2.0",
     "react-native": "0.71.4",
+    "react-native-safe-area-context": "^4.5.1",
+    "react-native-screens": "^3.20.0",
     "use-interval": "^1.4.0"
   },
   "devDependencies": {
