--- a/package.json
+++ b/package.json
@@ -10,13 +10,16 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-masked-view/masked-view": "^0.2.9",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/native-stack": "^6.9.12",
     "cheerio": "^1.0.0-rc.12",
     "react": "18.2.0",
     "react-native": "0.71.4",
+    "react-native-linear-gradient": "^2.6.2",
     "react-native-safe-area-context": "^4.5.1",
     "react-native-screens": "^3.20.0",
+    "react-native-skeleton-placeholder": "^5.2.4",
     "use-interval": "^1.4.0"
   },
   "devDependencies": {
