--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "snakeOnGithub",
+  "name": "SnakeOnGithub",
   "version": "0.0.1",
   "private": true,
   "scripts": {
@@ -11,35 +11,38 @@
   },
   "dependencies": {
     "@react-native-masked-view/masked-view": "^0.2.9",
-    "@react-navigation/native": "^6.1.6",
-    "@react-navigation/native-stack": "^6.9.12",
+    "@react-navigation/native": "^6.1.18",
+    "@react-navigation/native-stack": "^6.11.0",
     "cheerio": "^1.0.0-rc.12",
-    "react": "18.2.0",
-    "react-native": "0.71.4",
-    "react-native-linear-gradient": "^2.6.2",
-    "react-native-safe-area-context": "^4.5.1",
-    "react-native-screens": "^3.20.0",
+    "react": "18.3.1",
+    "react-native": "0.76.1",
+    "react-native-linear-gradient": "^2.8.3",
+    "react-native-safe-area-context": "^4.14.0",
+    "react-native-screens": "^3.35.0",
     "react-native-skeleton-placeholder": "^5.2.4",
     "use-interval": "^1.4.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0",
-    "@babel/preset-env": "^7.20.0",
-    "@babel/runtime": "^7.20.0",
-    "@react-native-community/eslint-config": "^3.2.0",
-    "@tsconfig/react-native": "^2.0.2",
-    "@types/jest": "^29.2.1",
-    "@types/react": "^18.0.24",
+    "@babel/core": "^7.25.2",
+    "@babel/preset-env": "^7.25.3",
+    "@babel/runtime": "^7.25.0",
+    "@react-native-community/cli": "15.0.0",
+    "@react-native-community/cli-platform-android": "15.0.0",
+    "@react-native-community/cli-platform-ios": "15.0.0",
+    "@react-native/babel-preset": "0.76.1",
+    "@react-native/eslint-config": "0.76.1",
+    "@react-native/metro-config": "0.76.1",
+    "@react-native/typescript-config": "0.76.1",
+    "@types/react": "^18.2.6",
     "@types/react-test-renderer": "^18.0.0",
-    "babel-jest": "^29.2.1",
+    "babel-jest": "^29.6.3",
     "eslint": "^8.19.0",
-    "jest": "^29.2.1",
-    "metro-react-native-babel-preset": "0.73.8",
-    "prettier": "^2.4.1",
-    "react-test-renderer": "18.2.0",
-    "typescript": "4.8.4"
+    "jest": "^29.6.3",
+    "prettier": "2.8.8",
+    "react-test-renderer": "18.3.1",
+    "typescript": "5.0.4"
   },
-  "jest": {
-    "preset": "react-native"
+  "engines": {
+    "node": ">=18"
   }
 }
