--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
     "test": "jest"
   },
   "dependencies": {
+    "@apollo/client": "^3.12.3",
     "@react-native-masked-view/masked-view": "^0.2.9",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/native-stack": "^6.11.0",
     "cheerio": "^1.0.0-rc.12",
+    "graphql": "^16.10.0",
     "react": "18.3.1",
     "react-native": "0.76.1",
     "react-native-linear-gradient": "^2.8.3",
