--- a/package.json
+++ b/package.json
@@ -11,31 +11,31 @@
   },
   "dependencies": {
     "@apollo/client": "^3.12.3",
-    "@react-navigation/native": "^6.1.18",
+    "@react-navigation/native": "^6.0.8",
     "@react-navigation/native-stack": "^6.11.0",
     "graphql": "^16.10.0",
     "react": "18.3.1",
-    "react-native": "0.76.1",
-    "react-native-safe-area-context": "^4.14.0",
-    "react-native-screens": "^3.35.0",
+    "react-native": "^0.77.2",
+    "react-native-safe-area-context": "^5.1.0",
+    "react-native-screens": "^4.5.0",
     "use-interval": "^1.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
     "@babel/preset-env": "^7.25.3",
     "@babel/runtime": "^7.25.0",
-    "@react-native-community/cli": "15.0.0",
-    "@react-native-community/cli-platform-android": "15.0.0",
-    "@react-native-community/cli-platform-ios": "15.0.0",
-    "@react-native/babel-preset": "0.76.1",
-    "@react-native/eslint-config": "0.76.1",
-    "@react-native/metro-config": "0.76.1",
-    "@react-native/typescript-config": "0.76.1",
+    "@react-native-community/cli": "^15.0.1",
+    "@react-native-community/cli-platform-android": "^15.0.1",
+    "@react-native-community/cli-platform-ios": "^15.0.1",
+    "@react-native/babel-preset": "^0.77.2",
+    "@react-native/eslint-config": "0.77.2",
+    "@react-native/metro-config": "^0.77.2",
+    "@react-native/typescript-config": "0.77.2",
     "@types/react": "^18.2.6",
     "@types/react-test-renderer": "^18.0.0",
-    "babel-jest": "^29.6.3",
+    "@types/jest": "^29.5.13",
     "eslint": "^8.19.0",
-    "jest": "^29.6.3",
+    "jest": "^29.2.1",
     "prettier": "2.8.8",
     "react-native-dotenv": "^3.4.11",
     "react-test-renderer": "18.3.1",
